monticore-grammar/src/test/resources/de/monticore/grammar/cocos/valid/ProdExtendsNotExistingProd.mc4
/* (c) https://github.com/MontiCore/monticore */
package  de.monticore.grammar.cocos.valid;

grammar ProdExtendsNotExistingProd {

    interface ISub;

    Super = "A";

    Sup extends Super = "a";

    Sub implements ISub = "b";

}
